--- a/vortex-core/build.gradle
+++ b/vortex-core/build.gradle
@@ -1,6 +1,7 @@
 dependencies {
 
 
+    compile group:'com.typesafe.akka', name:'akka-actor_2.11', version:'2.4.1'
 
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
